<resources>
    <string name="app_name">Github Client</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="repo_description">Descripción del repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="test_text">Esto es una prueba</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
</resources>