<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RepoItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/owner_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_foreground" />

            <!-- Imágen del repo añadiendo los botones de editar y eliminar -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageButton
                    android:id="@+id/edit_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/edit_square_24"
                    android:contentDescription="@string/edit"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/edit"
                    android:layout_marginEnd="60dp" />

                <ImageButton
                    android:id="@+id/delete_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/delete_24"
                    android:contentDescription="@string/delete"
                    android:tint="@color/delete"
                    android:background="?attr/selectableItemBackgroundBorderless" />

            </LinearLayout>

        </LinearLayout>

        <!-- Información del repositorio lado derecho -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_name"
                    android:padding="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_description"
                    android:padding="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/repo_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text"
                    android:padding="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_lang"
                    android:padding="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/repo_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text"
                    android:padding="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
